--- a/AndroidDemo/res/layout/fragment.xml
+++ b/AndroidDemo/res/layout/fragment.xml
@@ -3,6 +3,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+    <LinearLayout 
+        android:id="@+id/ll"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        >
+        <Button 
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="fragment.show"
+        />
+        <Button 
+        android:id="@+id/button02"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="fragment.exchange"
+        />
+    </LinearLayout>
+    
     <FrameLayout 
         android:id="@+id/fragment"
         android:layout_width="match_parent"
