--- a/AndroidDemo/res/layout/activity_main.xml
+++ b/AndroidDemo/res/layout/activity_main.xml
@@ -12,9 +12,11 @@
         />
     <TextView  
         android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/button01"
-        android:text="aa"/>
+        android:gravity="center"
+        android:textSize="20sp"
+        android:text="FirstFragment"/>
 
 </RelativeLayout>
