--- a/AndroidDemo/res/layout/item_radio.xml
+++ b/AndroidDemo/res/layout/item_radio.xml
@@ -6,7 +6,7 @@
     <RadioButton 
         android:id="@+id/button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="80dip"
         />
 
 </LinearLayout>
